fix cover display on IE, editing line

--- a/media/css/gcd/default/issue.css
+++ b/media/css/gcd/default/issue.css
@@ -136,7 +136,6 @@ div#format {
 	float:left;
 	width:223px;
 	margin-left:-225px;
-	position:relative;
 }
 .coverImage img {
     border: solid 1px;
